...
      key: const Key('forgot_pwd'),
      onPressed: () async {
        forgotPasswordPressed = true;

        if (formKey.currentState != null &&
            (!formKey.currentState!.validateGranularly().any(
                (final x) => x.widget.key == const Key('t_email_field')))) {
          bool wantToResetPassword = false;

          // show popup to prompt user for confirmation of email to send a password
          // reset to
          if (mounted) {
            wantToResetPassword = await showDialog<bool>(
...
              return null;
            },
            onSaved: (final value) => formData['email'] = value?.trim() ?? '',
          ),
          const SizedBox(height: 10),
          TextFormField(
            key: const Key('t_password_field'),
            controller: passwordController,
            inputFormatters: [
              LengthLimitingTextInputFormatter(20),
            ],
            decoration: InputDecoration(
              labelText: 'Password',
...
    );
  }

  /// The widget for the login button
  Widget LoginButtonWidget() {
    return ElevatedButton(
      key: const Key('login_button'),
      onPressed: isLoading
      // Disable button when loading
          ? null
          : () async {
        forgotPasswordPressed = false;

...
